cluster/apps/default/ingresses/base/adminer/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name adminer
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`adminer.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: secure-headers
        - name: local-only
      services:
        - name: *name
          port: 8080
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
